0.51: datatable, solved conflict between initialization and columns-visibility.  Bootbox, made confirm synchronous to avoid premature closing.  Started with combining hardware and software category into repair

--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -52,3 +52,7 @@
     border-style: solid;
     padding-right: 5px;
 }
+
+.form-element .required {
+    color: orangered;
+}
